multi language support

--- a/core/include_template_info.phtml
+++ b/core/include_template_info.phtml
@@ -1,44 +1,49 @@
 <%
 '======================================================================================================
-	'Set conn = Server.CreateObject("ADODB.Connection")
-	'dbconn.open Session("ConnectionString")
+	Set t_conn = Server.CreateObject("ADODB.Connection")
+	t_conn.open g_connection_string
 
 	sql = "SELECT setting_values FROM " &  g_storeid & "_setting WHERE setting_type='THEME_ENABLE'"
-	Set rsSetting = dbconn.Execute(sql)
+	Set rsSetting = t_conn.Execute(sql)
 	if not rsSetting.EOF then
 		THEME_ENABLE = Trim(rsSetting(0))
 	else
 		THEME_ENABLE= "0"
 	end if
 	rsSetting.Close
+	set rsSetting = nothing
 
 	sql = "SELECT setting_values FROM " &  g_storeid & "_setting WHERE setting_type='THEME_TEMPLATE'"
-	Set rsSetting = dbconn.Execute(sql)
+	Set rsSetting = t_conn.Execute(sql)
 	if not rsSetting.EOF then
 		THEME_TEMPLATE = Trim(rsSetting(0))
 	else
 		THEME_TEMPLATE = ""
 	end if
 	rsSetting.Close
+	set rsSetting = nothing
 
 	sql = "SELECT setting_values FROM " &  g_storeid & "_setting WHERE setting_type='THEME_SKIN'"
-	Set rsSetting = dbconn.Execute(sql)
+	Set rsSetting = t_conn.Execute(sql)
 	if not rsSetting.EOF then
 		THEME_SKIN = Trim(rsSetting(0))
 	else
 		THEME_SKIN = ""
 	end if
 	rsSetting.Close
+	set rsSetting = nothing
 
 	sql = "SELECT setting_values FROM " &  g_storeid & "_setting WHERE setting_type='THEME_ALLOWED_IPS'"
-	Set rsSetting = dbconn.Execute(sql)
+	Set rsSetting = t_conn.Execute(sql)
 	if not rsSetting.EOF then
 		THEME_ALLOWED_IPS = Trim(rsSetting(0))
 	else
 		THEME_ALLOWED_IPS = "0"
 	end if
 	rsSetting.Close
-	dbconn.close
+	set rsSetting = nothing
+	t_conn.close
+	set t_conn = nothing
 
 	THEME_ALLOWED_IPS = "0"
 
