--- a/manager/catalog_category.phtml
+++ b/manager/catalog_category.phtml
@@ -15,6 +15,8 @@
 <link rel="stylesheet" href="assets/plugins/dynatree/src/skin-vista/ui.dynatree.css">
 <link href="vendor/select2/select2.min.css" rel="stylesheet" media="screen">
 <link href="vendor/DataTables/css/DT_bootstrap.css" rel="stylesheet" media="screen">
+<link href="assets/plugins/bootstrap-modal/css/bootstrap-modal-bs3patch.css" rel="stylesheet" type="text/css"/>
+<link href="assets/plugins/bootstrap-modal/css/bootstrap-modal.css" rel="stylesheet" type="text/css"/>
 <!-- end: CSS REQUIRED FOR THIS PAGE ONLY -->
 <link rel="stylesheet" href="assets/css/custom.css">
 </head>	
@@ -143,54 +145,46 @@
 	</div>
 	
 	<div class="modal fade" id="myModal1" tabindex="-1" role="dialog" aria-hidden="true">
-		<div class="modal-dialog">
-			<div class="modal-content">
-				<div class="modal-header">
-					<button type="button" class="close" data-dismiss="modal" aria-hidden="true">
-						&times;
-					</button>
-					<h4 class="modal-title">Add New Category</h4>
-				</div>
-				<div class="modal-body">
-					<p>
-						Would you like to add new Root Cateogry?
-					</p>
-				</div>
-				<div class="modal-footer">
-					<button aria-hidden="true" data-dismiss="modal" class="btn btn-default">
-						Close
-					</button>
-					<button class="btn btn-primary" data-dismiss="modal" id="btn-add-root-category-confirm">
-						Confirm
-					</button>
-				</div>
-			</div>
+		<div class="modal-header">
+			<button type="button" class="close" data-dismiss="modal" aria-hidden="true">
+				&times;
+			</button>
+			<h4 class="modal-title">Add New Category</h4>
+		</div>
+		<div class="modal-body">
+			<p>
+				Would you like to add new Root Cateogry?
+			</p>
+		</div>
+		<div class="modal-footer">
+			<button aria-hidden="true" data-dismiss="modal" class="btn btn-default">
+				Close
+			</button>
+			<button class="btn btn-primary" data-dismiss="modal" id="btn-add-root-category-confirm">
+				Confirm
+			</button>
 		</div>
 	</div>
 	
 	<div class="modal fade" id="myModal2" tabindex="-1" role="dialog" aria-hidden="true">
-		<div class="modal-dialog">
-			<div class="modal-content">
-				<div class="modal-header">
-					<button type="button" class="close" data-dismiss="modal" aria-hidden="true">
-						&times;
-					</button>
-					<h4 class="modal-title">Add Sub Category</h4>
-				</div>
-				<div class="modal-body">
-					<p>
-						Would you like to add Sub Category under currently selected category?
-					</p>
-				</div>
-				<div class="modal-footer">
-					<button aria-hidden="true" data-dismiss="modal" class="btn btn-default">
-						Close
-					</button>
-					<button class="btn btn-primary" data-dismiss="modal" id="btn-add-sub-category-confirm">
-						Confirm
-					</button>
-				</div>
-			</div>
+		<div class="modal-header">
+			<button type="button" class="close" data-dismiss="modal" aria-hidden="true">
+				&times;
+			</button>
+			<h4 class="modal-title">Add Sub Category</h4>
+		</div>
+		<div class="modal-body">
+			<p>
+				Would you like to add Sub Category under currently selected category?
+			</p>
+		</div>
+		<div class="modal-footer">
+			<button aria-hidden="true" data-dismiss="modal" class="btn btn-default">
+				Close
+			</button>
+			<button class="btn btn-primary" data-dismiss="modal" id="btn-add-sub-category-confirm">
+				Confirm
+			</button>
 		</div>
 	</div>
 	<div id="loading-mask" style="display:none">
@@ -199,6 +193,7 @@
 	<div id="dialog-confirm" title="Confirmation Required">
 	  Are you sure you want to do this?
 	</div>
+	
 	<!--#INCLUDE FILE="include/js.phtml"-->
 	<!-- start: JAVASCRIPTS REQUIRED FOR THIS PAGE ONLY -->
 	<script src="assets/plugins/jquery-ui/jquery-ui-1.10.1.custom.min.js" type="text/javascript"></script>
@@ -207,6 +202,8 @@
 	<script src="vendor/ckeditor/adapters/jquery.js"></script>
 	<script src="vendor/jquery-validation/jquery.validate.min.js"></script>
 	<script src="vendor/select2/select2.min.js"></script>
+	<script src="assets/plugins/bootstrap-modal/js/bootstrap-modal.js"></script>
+	<script src="assets/plugins/bootstrap-modal/js/bootstrap-modalmanager.js"></script>
 	<script src="vendor/DataTables/jquery.dataTables.min.js"></script>
 	<!-- end: JAVASCRIPTS REQUIRED FOR THIS PAGE ONLY -->
 	<script src="assets/js/main.js"></script>
