--- a/util/xt_func_string.phtml
+++ b/util/xt_func_string.phtml
@@ -170,6 +170,32 @@ Function FilterXSS(strng)
 
 End Function
 
+Function TranslateX(string, strTypeId, strEntityId, strFieldId)
+	
+	'=======================================================================
+	' TYPE_ID : 1: category 2: product
+	' FIELD_ID : 1 : name (1, 2)
+	'=======================================================================
+	xstring = string
+	
+	current_view_id = "4"
+	
+	sql = "SELECT field_value FROM " & g_storeid & "_store_type_data_varchar WHERE "
+	sql = sql & "type_id=" & strTypeId & " AND "
+	sql = sql & "view_id=" & current_view_id & " AND "
+	sql = sql & "entity_id='" & strEntityId & "' AND "
+	sql = sql & "field_id=" & strFieldId & ""
+	
+	set rsx = dbconn.Execute(sql)
+	if not rsx.EOF then
+		xstring = rsx(0)
+	end if
+	rsx.Close
+	set rsx = nothing
+	TranslateX = xstring
+	
+End Function
+
 
 </SCRIPT>
 
