--- a/theme/marketshop1/include/head.phtml
+++ b/theme/marketshop1/include/head.phtml
@@ -2,7 +2,7 @@
 <meta name="format-detection" content="telephone=no" />
 <meta name="viewport" content="width=device-width, initial-scale=1, maximum-scale=1">
 <link href="image/favicon.png" rel="icon" />
-<title>Marketshop - eCommerce HTML Template</title>
+<title>HUBUTU</title>
 <meta name="description" content="Responsive and clean html template design for any kind of ecommerce webshop">
 <!-- CSS Part Start-->
 <link rel="stylesheet" type="text/css" href="<%=skin_base_url%>theme/<%=THEME_TEMPLATE%>/js/bootstrap/css/bootstrap.min.css" />
