--- a/theme/marketshop1/login.phtml
+++ b/theme/marketshop1/login.phtml
@@ -1,6 +1,6 @@
 <%
-	Response.CodePage = 1252 
-	Response.CharSet = "windows-1252" 
+	Response.CodePage = 65001
+	Response.CharSet = "UTF-8"
 %>
 <!--#INCLUDE FILE="../../core/checkout/include_login_start.phtml"-->
 <!--#INCLUDE FILE="template_setting.phtml"-->
@@ -23,3 +23,4 @@
 <!--#INCLUDE FILE="include/AbsoluteFooter.phtml"-->
 </body>
 </html>
+<!--#INCLUDE FILE="../../core/checkout/include_login_end.phtml"-->
