--- a/login.phtml
+++ b/login.phtml
@@ -1,4 +1,5 @@
 <%@ Language=VBScript %>
+<!--#INCLUDE FILE="core/include_store_view_selector.phtml"-->
 <!--#INCLUDE FILE="local/local.phtml"-->
 <!--#INCLUDE FILE="core/include_template_info.phtml"-->
 <%
