--- a/theme/marketshop1/include/login.phtml
+++ b/theme/marketshop1/include/login.phtml
@@ -9,34 +9,34 @@
 	<div class="row">
 		<!--Middle Part Start-->
 		<div id="content" class="col-sm-9">
-			<h1 class="title">Account Login</h1>
+			<h1 class="title"><%=a("Account Login")%></h1>
 			<div class="row">
 				<div class="col-sm-6">
-					<h2 class="subtitle">New Customer</h2>
+					<h2 class="subtitle"><%=a("New Customer")%></h2>
 					<p>
-						<strong>Register Account</strong>
+						<strong><%=a("Register Account")%></strong>
 					</p>
 					<p>
-						By creating an account you will be able to shop faster, be up to date on an order's status, and keep track of the orders you have previously made.
+						<%=a("By creating an account you will be able to shop faster, be up to date on an order's status, and keep track of the orders you have previously made.")%>
 					</p>
-					<a href="register.html" class="btn btn-primary">Continue</a>
+					<a href="register.html" class="btn btn-primary"><%=a("Continue")%></a>
 				</div>
 				<div class="col-sm-6">
-					<h2 class="subtitle">Returning Customer</h2>
+					<h2 class="subtitle"><%=a("Registered Customers")%></h2>
 					<p>
-						<strong>I am a returning customer</strong>
+						<strong><%=a("I am a returning customer")%></strong>
 					</p>
 					<div class="form-group">
-						<label class="control-label" for="input-email">E-Mail Address</label>
-						<input type="text" name="email" value="" placeholder="E-Mail Address" id="input-email" class="form-control"/>
+						<label class="control-label" for="input-email"><%=a("E-Mail Address")%></label>
+						<input type="text" name="email" value="" placeholder="<%=a("E-Mail Address")%>" id="input-email" class="form-control"/>
 					</div>
 					<div class="form-group">
-						<label class="control-label" for="input-password">Password</label>
-						<input type="password" name="password" value="" placeholder="Password" id="input-password" class="form-control"/>
+						<label class="control-label" for="input-password"><%=a("Password")%></label>
+						<input type="password" name="password" value="" placeholder="<%=a("Password")%>" id="input-password" class="form-control"/>
 						<br/>
-						<a href="#">Forgotten Password</a>
+						<a href="#"><%=a("Forgot Password?")%></a>
 					</div>
-					<input type="submit" value="Login" class="btn btn-primary"/>
+					<input type="submit" value="<%=a("Login")%>" class="btn btn-primary"/>
 				</div>
 			</div>
 		</div>
